--- a/app/.gitignore
+++ b/app/.gitignore
@@ -2,7 +2,7 @@
 *.apk
 *.ap_
 
-# Files for the ART/Dalvik VM
+# Files for the Dalvik VM
 *.dex
 
 # Java class files
@@ -11,7 +11,6 @@
 # Generated files
 bin/
 gen/
-out/
 
 # Gradle files
 .gradle/
@@ -26,16 +25,11 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
+# Windows clutter
+Thumbs.db
 
-# Android Studio captures folder
-captures/
-
-# Intellij
-*.iml
+# Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 .idea/workspace.xml
-.idea/libraries
-
-# Keystore files
-*.jks
+.idea/tasks.xml
+.idea/datasources.xml
+.idea/dataSources.ids
